--- a/src/screenscrape-website/MainPage.xaml
+++ b/src/screenscrape-website/MainPage.xaml
@@ -10,14 +10,14 @@
 
     <Grid x:Name="layoutRoot">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Height="150" VerticalAlignment="Top" >
-            <TextBox Width="400" Height="30" x:Name="tbSearch" VerticalAlignment="Top"></TextBox>
+            <ComboBox x:Name="cbUrls" Width="400" Height="30" VerticalAlignment="Top"></ComboBox>
             <Button x:Name="butSearch" Click="butSearch_Click" Margin="5,0,0,0" VerticalAlignment="Top">Load URL</Button>
 
             <ScrollViewer Width="500" Height="150" Margin="10,0,0,0" VerticalAlignment="Top" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled">
                 <TextBox x:Name="tbScript" AcceptsReturn="True"></TextBox>
             </ScrollViewer>
 
-            <Button x:Name="butInject" Click="butInject_Click" Margin="5,0,0,0" VerticalAlignment="Bottom">Inject JS</Button>
+            <Button x:Name="butInject" Click="butInject_Click" Margin="5,0,0,0" VerticalAlignment="Bottom" IsEnabled="False">Inject JS</Button>
 
             <ScrollViewer Width="330" Height="150" Margin="10,0,0,0" VerticalAlignment="Top" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled">
                 <Border BorderThickness="1" BorderBrush="WhiteSmoke" Background="WhiteSmoke">
