--- a/src/screenscrape-website/MainPage.xaml
+++ b/src/screenscrape-website/MainPage.xaml
@@ -11,27 +11,35 @@
     <Grid x:Name="layoutRoot">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Height="150" VerticalAlignment="Top" >
             <StackPanel Orientation="Vertical" >
-                <StackPanel Orientation="Horizontal" Height="30" >
-                    <ComboBox x:Name="cbUrls" Width="500" VerticalAlignment="Top"></ComboBox>
+                <StackPanel Orientation="Horizontal" Height="30">
+                    <ComboBox x:Name="cbUrls" Width="395" VerticalAlignment="Top"></ComboBox>
                     <Button x:Name="butSearch" Click="butSearch_Click" Margin="5,0,0,0" Width="100">1. Load URL</Button>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Height="120"  >
-                    <ScrollViewer Width="500" Height="120" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled">
+                <StackPanel Orientation="Horizontal" Height="120" >
+                    <ScrollViewer Height="120" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled" Width="500" >
                         <TextBox x:Name="tbScript" AcceptsReturn="True"></TextBox>
                     </ScrollViewer>
-                    <Button x:Name="butInject" Click="butInject_Click" Margin="5,0,0,0" VerticalAlignment="Bottom" IsEnabled="False" Width="100">2. Inject JS</Button>
                 </StackPanel>
             </StackPanel>
 
-            <ScrollViewer Width="330" Height="150" Margin="5,0,0,0" VerticalAlignment="Top" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled">
-                <Border BorderThickness="1" BorderBrush="WhiteSmoke" Background="WhiteSmoke">
-                    <TextBlock x:Name="tbCallback" TextWrapping="NoWrap" Foreground="LightGray" ></TextBlock>
-                </Border>
-            </ScrollViewer>
-            <Button x:Name="butConvert" Margin="5,0,0,0" VerticalAlignment="Center" IsEnabled="False" Width="100" Click="butConvert_Click">3. Convert</Button>
+            
+            <StackPanel Orientation="Vertical" Width="400">
+                <Button x:Name="butInject" Click="butInject_Click" Margin="5,0,0,0" IsEnabled="False" Width="100">2. Inject JS</Button>
+                <ScrollViewer Height="120" Margin="5,0,0,0" VerticalAlignment="Top" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled">
+                    <Border BorderThickness="1" BorderBrush="WhiteSmoke" Background="WhiteSmoke">
+                        <TextBlock x:Name="tbCallback" TextWrapping="NoWrap" Foreground="LightGray" ></TextBlock>
+                    </Border>
+                </ScrollViewer>
+            </StackPanel>
+            
+            
 
             <StackPanel Orientation="Vertical" Margin="5,0,0,0">
-                <ComboBox x:Name="cbConversionTargets" Width="500"></ComboBox>
+                <StackPanel Orientation="Horizontal">
+                    <ComboBox x:Name="cbConversionTargets" Width="395" IsEnabled="False"></ComboBox>
+                    <Button x:Name="butConvert" Margin="5,0,0,0" IsEnabled="False" Width="100" Click="butConvert_Click">3. Convert</Button>
+                </StackPanel>
+                
                 <StackPanel Orientation="Horizontal" Height="115"  >
                     <ScrollViewer Width="500" Height="115" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled">
                         <TextBox x:Name="tbConversionResult" AcceptsReturn="True"></TextBox>
