--- a/src/screenscrape-website-core/screenscrape-website-core/MainWindow.xaml
+++ b/src/screenscrape-website-core/screenscrape-website-core/MainWindow.xaml
@@ -7,7 +7,44 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <Grid x:Name="layoutRoot">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Height="150" VerticalAlignment="Top" >
+            <StackPanel Orientation="Vertical" >
+                <StackPanel Orientation="Horizontal" Height="30">
+                    <ComboBox x:Name="cbUrls" Width="395" VerticalAlignment="Top"></ComboBox>
+                    <Button x:Name="butSearch" Click="butSearch_Click" Margin="5,0,0,0" Width="100">1. Load URL</Button>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Height="120" >
+                    <ScrollViewer Height="120" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled" Width="500" >
+                        <TextBox x:Name="tbScript" AcceptsReturn="True"></TextBox>
+                    </ScrollViewer>
+                </StackPanel>
+            </StackPanel>
+
+
+            <StackPanel Orientation="Vertical" Width="400">
+                <Button x:Name="butInject" Click="butInject_Click" Margin="5,0,0,0" IsEnabled="False" Width="100">2. Inject JS</Button>
+                <ScrollViewer Height="120" Margin="5,0,0,0" VerticalAlignment="Top" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled">
+                    <Border BorderThickness="1" BorderBrush="WhiteSmoke" Background="WhiteSmoke">
+                        <TextBlock x:Name="tbCallback" TextWrapping="NoWrap" Foreground="LightGray" ></TextBlock>
+                    </Border>
+                </ScrollViewer>
+            </StackPanel>
+
+
+
+            <StackPanel Orientation="Vertical" Margin="5,0,0,0">
+                <StackPanel Orientation="Horizontal">
+                    <ComboBox x:Name="cbConversionTargets" Width="395" IsEnabled="False"></ComboBox>
+                    <Button x:Name="butConvert" Margin="5,0,0,0" IsEnabled="False" Width="100" Click="butConvert_Click">3. Convert</Button>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Height="115"  >
+                    <ScrollViewer Width="500" Height="115" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled">
+                        <TextBox x:Name="tbConversionResult" AcceptsReturn="True"></TextBox>
+                    </ScrollViewer>
+                </StackPanel>
+            </StackPanel>
+        </StackPanel>
+    </Grid>
 </Window>
