--- a/src/screenscrape-website-core/screenscrape-website-core/CurrencyConverter.xaml
+++ b/src/screenscrape-website-core/screenscrape-website-core/CurrencyConverter.xaml
@@ -8,16 +8,20 @@
     mc:Ignorable="d">
 
     <Grid x:Name="layoutRoot">
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="top" Height="30">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="top" Height="35">
             <ComboBox x:Name="cbFrom">
                 <ComboBoxItem>AUD</ComboBoxItem>
-                <ComboBoxItem>USD</ComboBoxItem>
+                <ComboBoxItem>EUR</ComboBoxItem>
+                <ComboBoxItem>GBP</ComboBoxItem>
+                <ComboBoxItem> USD</ComboBoxItem>
             </ComboBox>
             <ComboBox x:Name="cbTo">
                 <ComboBoxItem>AUD</ComboBoxItem>
+                <ComboBoxItem>EUR</ComboBoxItem>
+                <ComboBoxItem>GBP</ComboBoxItem>
                 <ComboBoxItem>USD</ComboBoxItem>
             </ComboBox>
-            <TextBox x:Name="tbAmount"></TextBox>
+            <TextBox x:Name="tbAmount" Width="200"></TextBox>
             <Button x:Name="butDoConversion" Click="butDoConversion_Click" Content="Convert"></Button>
             <TextBlock x:Name="lblConversionAmount"></TextBlock>
         </StackPanel>
