--- a/src/screenscrape-website-core/screenscrape-website-core/CoinSearch.xaml
+++ b/src/screenscrape-website-core/screenscrape-website-core/CoinSearch.xaml
@@ -14,9 +14,8 @@
         </Grid.Resources>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="top" Height="32">
             <Button x:Name="butDoConversion" Click="butDoConversion_Click" Content="Refresh"></Button>
-            <TextBlock x:Name="lblProcessing" Margin="10,5,0,0"></TextBlock>
         </StackPanel>
-        <ListBox Margin="0,40,0,0" x:Name="lbResults" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+        <ListBox Margin="0,40,0,30" x:Name="lbResults" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -43,5 +42,8 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <Border HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Background="Gray">
+            <TextBlock x:Name="lblProcessing" Margin="3" Foreground="White"></TextBlock>
+        </Border>
     </Grid>
 </Window>
